# simtetra

analysis/: sortandclean.sh
analysis/make/: MakeEfficiencyFile.sh  MakeEfficiencyFile_C.d  MakeEfficiencyFile_C_ACLiC_dict_rdict.pcm
analysis/plot/: PlotEfficiencies.C  th+hp.C
figures/: Eff.C
simu/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGenerator.cc  RunAction.cc  SteppingAction.cc  SteppingAction.hh  cf252test.mac  run.mac  runverylowstat.mac  simTetra.cc  vis.mac
simu/include/: DetectorConstruction.hh
simu/src/: DetectorConstruction.cc
